building last github commit

--- a/node/views/index.pug
+++ b/node/views/index.pug
@@ -74,6 +74,9 @@ html
           p
             a(href='https://github.com/alexbuechele/leetcode') Leetcode Solutions
           p Problems I've solved on leetcode or other coding challenge sites.
+          p
+            a(href={latest_github}) Last github commit at {latest_github_time}
+          p
         // Contact
         article#contact
           h2.major Contact
