--- a/node/views/index.pug
+++ b/node/views/index.pug
@@ -75,7 +75,7 @@ html
             a(href='https://github.com/alexbuechele/leetcode') Leetcode Solutions
           p Problems I've solved on leetcode or other coding challenge sites.
           p
-            a(href=latest_github) Last github commit at #{latest_github_time}
+            a(href=latest_github) Last github commit at #{latest_github_date}
           p
         // Contact
         article#contact
