added to projects section

--- a/node/views/index.pug
+++ b/node/views/index.pug
@@ -72,8 +72,16 @@ html
             | Node and Express on the backend, PostgreSQL for data storage and a landing page
             | template from HTML5UP.
           p
+            a(href='https://justasideproject.com') Unnamed Site
+          p
+            | This is a project I began in order to learn about serverless technology.
+            | It's deployed on the AWS platform and uses Lambda functions and API Gateway 
+            | for back-end functionality, DynamoDB for storage, S3 for storage. 
+            | The app itself runs on React.
+          p
             a(href='https://github.com/alexbuechele/leetcode') Leetcode Solutions
-          p Problems I've solved on leetcode or other coding challenge sites.
+          p 
+            | Problems I've solved on leetcode or other coding challenge sites.
           p
             a(href=latest_github) Last github commit at #{latest_github_date}
           p
