changed the 'for hire' stuff

--- a/node/views/index.pug
+++ b/node/views/index.pug
@@ -22,7 +22,7 @@ html
         .content
           .inner
             h1 Alex Buechele
-            p Software Developer for hire
+            p Software Developer
         nav
           ul
             li
@@ -42,14 +42,13 @@ html
           span.image.main
             img(src='images/pic01.jpg', alt='')
           p
-            | I am a self-taught software developer looking for my first full-time position. 
-            | I plan to upload some of my personal projects here so this site can function as a sort of portfolio.
+            | This website was a learning project orginally meant to double as a portfolio. 
+            | In May 2019 I found an internship and moved to San Diego, and in December my company converted me to full-time.
             br
             br
-            | 								While I have tinkered with code on a hobby level for many years, it wasn't until more recently that 
-            | 								I realized software development was what I wanted to do for the rest of my life. 
-            | 								At this point I am most familiar with C, python and javascript, but I am comfortable 
-            | 								working with other languages and learning new frameworks. 
+            | 								A few years ago I decided that I enjoyed my programming hobby enough to invest some real time in it and explore it as a career option. 
+            | 								I set out on a journey to teach myself to code and became confident that I could do it professionally. 
+            | 								I started with with C, python and javascript, but these days I mostly write Golang.
             br
             br
             | 								In a previous life, I studied organic chemistry.
@@ -71,13 +70,6 @@ html
             | This site is hosted on an Amazon EC2 instance. It uses NGINX for reverse proxy,
             | Node and Express on the backend, PostgreSQL for data storage and a landing page
             | template from HTML5UP.
-          p
-            a(href='https://justasideproject.com') Unnamed Site
-          p
-            | This is a project I began in order to learn about serverless technology.
-            | It's deployed on the AWS platform and uses Lambda functions and API Gateway 
-            | for back-end functionality, DynamoDB for storage, S3 for storage. 
-            | The app itself runs on React.
           p
             a(href='https://github.com/alexbuechele/leetcode') Leetcode Solutions
           p 
